--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,6 +1,19 @@
 .container {
-  width: 1200px;
   padding: 0px 15px;
   margin-left: auto;
   margin-right: auto;
+
+  width: 100%;
+
+  @include mq(mob) {
+    width: 480px;
+  }
+
+  @include mq(tab) {
+    width: 768px;
+  }
+
+  @include mq(desk) {
+    width: 1200px;
+  }
 }
