--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -1,47 +1,47 @@
-.main-nav {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 50px;
-}
+// .main-nav {
+//   // display: flex;
+//   // flex-wrap: wrap;
+//   // gap: 50px;
+// }
 
-.main-nav__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
+// .main-nav__link {
+//   // padding-top: 32px;
+//   // padding-bottom: 32px;
 
-  color: $title-text-color;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+//   // color: $title-text-color;
+//   // font-weight: 500;
+//   // line-height: 1.14;
+//   // letter-spacing: 0.02em;
 
-  transition-property: color;
-  transition-duration: $transition-duration;
-  transition-timing-function: $transition-timing-function;
+//   // transition-property: color;
+//   // transition-duration: $transition-duration;
+//   // transition-timing-function: $transition-timing-function;
 
-  &:hover {
-    color: $accent-blue-color;
-  }
-  &:focus {
-    color: $accent-blue-color;
-  }
+//   // &:hover {
+//   //   color: $accent-blue-color;
+//   // }
+//   // &:focus {
+//   //   color: $accent-blue-color;
+//   // }
 
-  &--current {
-    position: relative;
+//   // &--current {
+//   //   position: relative;
 
-    color: $accent-blue-color;
-    &::after {
-      content: "";
+//   //   color: $accent-blue-color;
+//   //   &::after {
+//   //     content: "";
 
-      position: absolute;
+//   //     position: absolute;
 
-      display: block;
-      width: 100%;
-      height: 4px;
-      bottom: 0px;
+//   //     display: block;
+//   //     width: 100%;
+//   //     height: 4px;
+//   //     bottom: 0px;
 
-      border-radius: 2px;
-      background-color: $accent-blue-color;
+//   //     border-radius: 2px;
+//   //     background-color: $accent-blue-color;
 
-      transform: translateY(1px);
-    }
-  }
-}
+//   //     transform: translateY(1px);
+//   //   }
+//   // }
+// }
