--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,14 +1,27 @@
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  @include section;
+
+  @include mq(tab) {
+    @include section;
+  }
+
+  @include mq(desk) {
+    @include section(94px, 94px);
+  }
 }
 
 .section__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  font-size: 28px;
+  line-height: calc(33 / 28);
+  text-align: center;
 
   color: $title-text-color;
 
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
+  @include mq(desk) {
+    margin-bottom: 50px;
+
+    font-size: 36px;
+    line-height: calc(42 / 36);
+  }
 }
