--- a/sass/layouts/_specialization.scss
+++ b/sass/layouts/_specialization.scss
@@ -1,5 +1,10 @@
 .specialization {
-  padding-top: 0px;
+  display: none;
+
+  @include mq(desk) {
+    display: block;
+    padding-top: 0px;
+  }
 }
 
 .specialization__list {
