--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -4,15 +4,17 @@
 
 .team__list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  width: 100%;
 }
 
 .team__item {
-  padding-bottom: 30px;
+  padding-bottom: 24px;
 
   display: flex;
-  flex-wrap: wrap;
-  flex-basis: calc((100% - 90px) / 4);
   flex-direction: column;
+  flex-basis: 100%;
   justify-content: start;
   align-items: center;
 
@@ -20,10 +22,17 @@
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-}
 
-.team__item + .team__item {
-  margin-left: 30px;
+  @include mq(tab) {
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 30px) / 2);
+  }
+
+  @include mq(desk) {
+    padding-bottom: 30px;
+
+    flex-basis: calc((100% - 90px) / 4);
+  }
 }
 
 .team__img {
@@ -50,17 +59,19 @@
 }
 
 .team__social-link {
-  &:hover {
-    background-color: $accent-blue-color;
-    color: $primary-bg-color;
+  @include mq(desk) {
+    &:hover {
+      background-color: $accent-blue-color;
+      color: $primary-bg-color;
+    }
+
+    &:focus {
+      background-color: $accent-blue-color;
+      color: $primary-bg-color;
+    }
   }
 
-  &:focus {
-    background-color: $accent-blue-color;
-    color: $primary-bg-color;
+  .team-social-link__icon {
+    fill: currentColor;
   }
-}
-
-.team-social-link__icon {
-  fill: currentColor;
 }
