--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column-reverse;
   gap: 20px;
-  flex-basis: 100%;
+  // flex-basis: 100%;
 
   font-weight: 700;
   font-size: 14px;
@@ -24,6 +24,8 @@
 }
 
 .subscribe-form__form-input {
+  flex-grow: 1;
+  display: block;
   padding-top: 14px;
   padding-bottom: 14px;
   padding-left: 16px;
