--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 60px;
 
   @include mq(tab) {
     flex-direction: unset;
@@ -37,7 +38,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 60px;
 
   @include mq(tab) {
   }
@@ -72,8 +72,6 @@
 }
 
 .footer-join-container__link {
-  margin-bottom: 60px;
-
   background-color: $footer-social-link-color;
 
   transition-property: background-color;
@@ -91,7 +89,6 @@
   }
 
   @include mq(desk) {
-    margin-bottom: 0;
   }
 }
 
