--- a/css/main.css
+++ b/css/main.css
@@ -137,18 +137,12 @@ button {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  position: relative;
 }
 .subscribe-button__icon {
   position: absolute;
   top: 13px;
   right: 28px;
-}
-@media screen and (min-width: 1200px) {
-  .subscribe-button {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-  }
 }
 
 .hero-button {
@@ -259,12 +253,175 @@ button {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+.menu-button__icon-close-menu {
+  display: none;
+}
+.menu-button__icon-close-menu__is-open .menu-button__icon-close-menu {
+  display: block;
+}
+.menu-button__icon-close-menu__is-open .menu-button__icon-menu {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu-button {
+    display: none;
+  }
+}
+
 .logo {
   color: #2196f3;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
+}
+
+.main-nav {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .main-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: #212121;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .main-nav__link:hover {
+    color: #2196f3;
+  }
+  .main-nav__link:focus {
+    color: #2196f3;
+  }
+  .main-nav__link--current {
+    position: relative;
+    color: #2196f3;
+  }
+  .main-nav__link--current::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    bottom: 0px;
+    border-radius: 2px;
+    background-color: #2196f3;
+    -webkit-transform: translateY(1px);
+            transform: translateY(1px);
+  }
+}
+
+.auth-nav {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .auth-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .auth-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: unset;
+    -webkit-box-direction: unset;
+        -ms-flex-direction: unset;
+            flex-direction: unset;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .auth-nav__link {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    padding-bottom: 5px;
+    padding-top: 5px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .auth-nav__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 10px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: var(--transition-duration);
+            transition-duration: var(--transition-duration);
+    -webkit-transition-timing-function: var(--transition-timing-function);
+            transition-timing-function: var(--transition-timing-function);
+  }
+  .auth-nav__link:hover {
+    color: #2196f3;
+  }
+  .auth-nav__link:focus {
+    color: #2196f3;
+  }
+}
+.auth-nav__link .auth-nav__icon-envelope,
+.auth-nav__link .auth-nav__icon-smartphone {
+  fill: currentColor;
 }
 
 .address {
@@ -364,7 +521,11 @@ button {
   -webkit-box-direction: reverse;
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 20px;
+  width: 100%;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1428571429;
@@ -373,18 +534,14 @@ button {
 }
 @media screen and (min-width: 1200px) {
   .subscribe-form__form-label {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    margin-top: 12px;
     width: 358px;
   }
 }
 
 .subscribe-form__form-input {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   display: block;
+  width: 100%;
   padding-top: 14px;
   padding-bottom: 14px;
   padding-left: 16px;
@@ -681,8 +838,52 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.header {
+  width: 100%;
+  background-color: #ffffff;
+  border-bottom: 1px solid #ececec;
+}
+
+@media screen and (min-width: 768px) {
+  .header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.header-nav {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .header__logo {
-  margin-right: 93px;
+  margin-right: 88px;
   padding-top: 24px;
   padding-bottom: 25px;
 }
@@ -694,6 +895,7 @@ button {
   padding: 60px 0px;
   background-color: #2f303a;
 }
+
 .footer__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -707,15 +909,50 @@ button {
           align-items: center;
   gap: 60px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .footer__container {
     -webkit-box-orient: unset;
     -webkit-box-direction: unset;
         -ms-flex-direction: unset;
             flex-direction: unset;
-    position: relative;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    gap: 93px;
   }
 }
+
+.footer__thumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 60px;
+}
+@media screen and (min-width: 768px) {
+  .footer__thumb {
+    -webkit-box-orient: unset;
+    -webkit-box-direction: unset;
+        -ms-flex-direction: unset;
+            flex-direction: unset;
+    gap: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__thumb {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    gap: 70px;
+  }
+}
+
 .footer__logo {
   display: inline-block;
   margin-bottom: 20px;
@@ -741,12 +978,12 @@ button {
     width: 231px;
     margin-top: 0;
     margin-bottom: 0;
-    margin-right: 70px;
   }
 }
 
 .footer-join-container__title {
   display: block;
+  width: 100%;
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 1.1428571429;
@@ -776,6 +1013,7 @@ button {
 .footer-join-container__link:hover {
   background: #2196f3;
 }
+
 .footer-join-container__icon {
   fill: #ffffff;
 }
@@ -792,20 +1030,18 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  width: 100%;
 }
 @media screen and (min-width: 1200px) {
   .footer__subscribe-form {
-    margin-bottom: 0;
-    position: absolute;
-    top: 12px;
-    right: 15px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 570px;
-    height: 86px;
+    -webkit-box-orient: unset;
+    -webkit-box-direction: unset;
+        -ms-flex-direction: unset;
+            flex-direction: unset;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    max-width: 570px;
   }
 }
 
