--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -16,19 +16,12 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
+  position: relative;
+
   &__icon {
     position: absolute;
     top: 13px;
     right: 28px;
-  }
-
-  @include mq(tab) {
-  }
-
-  @include mq(desk) {
-    position: absolute;
-    bottom: 0;
-    right: 0;
   }
 }
 
@@ -133,5 +126,33 @@
     color: $button-active-text-color;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+
+.menu-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+
+  &__icon-close-menu {
+    display: none;
+
+    &__is-open .menu-button__icon-close-menu {
+      display: block;
+    }
+
+    &__is-open .menu-button__icon-menu {
+      display: none;
+    }
+  }
+
+  @include mq(tab) {
+    display: none;
+  }
+
+  @include mq(desk) {
+    display: none;
   }
 }
