--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -1,8 +1,9 @@
 .subscribe-form__form-label {
   display: flex;
   flex-direction: column-reverse;
+  align-items: center;
   gap: 20px;
-  // flex-basis: 100%;
+  width: 100%;
 
   font-weight: 700;
   font-size: 14px;
@@ -11,21 +12,16 @@
 
   color: $primary-bg-color;
 
-  @include mq(tab) {
-  }
-
   @include mq(desk) {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    margin-top: 12px;
 
     width: 358px;
   }
 }
 
 .subscribe-form__form-input {
-  flex-grow: 1;
   display: block;
+  width: 100%;
   padding-top: 14px;
   padding-bottom: 14px;
   padding-left: 16px;
