--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -2,12 +2,6 @@
   padding: 60px 0px;
 
   background-color: $footer-bg-color;
-
-  @include mq(tab) {
-  }
-
-  @include mq(desk) {
-  }
 }
 
 .footer__container {
@@ -16,12 +10,27 @@
   align-items: center;
   gap: 60px;
 
+  @include mq(desk) {
+    flex-direction: unset;
+    align-items: flex-start;
+    gap: 93px;
+  }
+}
+
+.footer__thumb {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
+
   @include mq(tab) {
     flex-direction: unset;
-    position: relative;
+    gap: 165px;
   }
 
   @include mq(desk) {
+    align-items: flex-start;
+    gap: 70px;
   }
 }
 
@@ -39,20 +48,17 @@
   flex-direction: column;
   align-items: center;
 
-  @include mq(tab) {
-  }
-
   @include mq(desk) {
     width: 231px;
 
     margin-top: 0;
     margin-bottom: 0;
-    margin-right: 70px;
   }
 }
 
 .footer-join-container__title {
   display: block;
+  width: 100%;
   margin-bottom: 20px;
 
   font-size: 14px;
@@ -84,12 +90,6 @@
   &:hover {
     background: $accent-blue-color;
   }
-
-  @include mq(tab) {
-  }
-
-  @include mq(desk) {
-  }
 }
 
 .footer-join-container__icon {
@@ -101,20 +101,11 @@
   flex-direction: column;
   gap: 20px;
   align-items: center;
-  flex-basis: 100%;
-
-  @include mq(tab) {
-  }
+  width: 100%;
 
   @include mq(desk) {
-    margin-bottom: 0;
-
-    position: absolute;
-    top: 12px;
-    right: 15px;
-
-    display: flex;
-    width: 570px;
-    height: 86px;
+    flex-direction: unset;
+    align-items: flex-end;
+    max-width: 570px;
   }
 }
