--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,23 +1,31 @@
-// .header {
-//   // width: 100%;
-//   // background-color: $primary-bg-color;
-//   // border-bottom: 1px solid $header-border-color;
-// }
+.header {
+  width: 100%;
+  background-color: $primary-bg-color;
+  border-bottom: 1px solid $header-border-color;
+}
 
-// .header__container {
-//   // display: flex;
-//   // flex-wrap: wrap;
-//   // align-items: center;
-//   // justify-content: space-between;
-// }
+.header__container {
+  @include mq(tab) {
+    display: flex;
+    justify-content: space-between;
+  }
 
-// .header-nav {
-//   // display: flex;
-//   // align-items: center;
-// }
+  @include mq(desk) {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+.header-nav {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
 
 .header__logo {
-  margin-right: 93px;
+  margin-right: 88px;
   padding-top: 24px;
   padding-bottom: 25px;
 
