додав кнопку мобайлменю в портфоліо

--- a/css/main.css
+++ b/css/main.css
@@ -265,10 +265,10 @@ button {
 .menu-button__icon-close-menu {
   display: none;
 }
-.menu-button__icon-close-menu__is-open .menu-button__icon-close-menu {
+.menu-button__is-open .menu-button__icon-close-menu {
   display: block;
 }
-.menu-button__icon-close-menu__is-open .menu-button__icon-menu {
+.menu-button__is-open .menu-button__icon-menu {
   display: none;
 }
 @media screen and (min-width: 768px) {
