--- a/css/main.css
+++ b/css/main.css
@@ -262,15 +262,6 @@ button {
   border: none;
   background-color: transparent;
 }
-.menu-button__icon-close-menu {
-  display: none;
-}
-.menu-button__is-open .menu-button__icon-close-menu {
-  display: block;
-}
-.menu-button__is-open .menu-button__icon-menu {
-  display: none;
-}
 @media screen and (min-width: 768px) {
   .menu-button {
     display: none;
@@ -280,6 +271,18 @@ button {
   .menu-button {
     display: none;
   }
+}
+
+.menu-button__icon-close-menu {
+  display: none;
+}
+
+.menu-button.is-openn .menu-button__icon-close-menu {
+  display: block;
+}
+
+.menu-button.is-openn .menu-button__icon-menu {
+  display: none;
 }
 
 .logo {
