--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -136,18 +136,6 @@
   border: none;
   background-color: transparent;
 
-  &__icon-close-menu {
-    display: none;
-  }
-
-  &__is-open .menu-button__icon-close-menu {
-    display: block;
-  }
-
-  &__is-open .menu-button__icon-menu {
-    display: none;
-  }
-
   @include mq(tab) {
     display: none;
   }
@@ -155,4 +143,16 @@
   @include mq(desk) {
     display: none;
   }
+}
+
+.menu-button__icon-close-menu {
+  display: none;
+}
+
+.menu-button.is-openn .menu-button__icon-close-menu {
+  display: block;
+}
+
+.menu-button.is-openn .menu-button__icon-menu {
+  display: none;
 }
