--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,7 @@
 @import "./components/form/agreement";
 @import "./components/form/checkbox";
 @import "./components/hover-overlay";
+@import "./components/mobile-menu.scss";
 
 //layouts
 @import "./layouts/header";
