--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,6 @@ button {
 .data-close-modal-button :focus {
   color: #2196f3;
 }
-
 .data-close-modal-button__icon {
   fill: currentColor;
 }
@@ -220,8 +219,8 @@ button {
 .portfolio-nav-button {
   padding: 6px 22px;
   border-radius: 4px;
-  background: .portfolio-nav-button portfolio-button-bg-color;
-  color: .portfolio-nav-button title-text-color;
+  background: #f5f4fa;
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -231,10 +230,10 @@ button {
   transition-property: background-color, color, -webkit-box-shadow;
   transition-property: background-color, color, box-shadow;
   transition-property: background-color, color, box-shadow, -webkit-box-shadow;
-  -webkit-transition-duration: .portfolio-nav-button transition-duration;
-          transition-duration: .portfolio-nav-button transition-duration;
-  -webkit-transition-timing-function: .portfolio-nav-button transition-timing-function;
-          transition-timing-function: .portfolio-nav-button transition-timing-function;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-nav-button--see {
   background: #2196f3;
@@ -251,38 +250,6 @@ button {
   color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.menu-button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-}
-@media screen and (min-width: 768px) {
-  .menu-button {
-    display: none;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .menu-button {
-    display: none;
-  }
-}
-
-.menu-button__icon-close-menu {
-  display: none;
-}
-
-.menu-button.is-openn .menu-button__icon-close-menu {
-  display: block;
-}
-
-.menu-button.is-openn .menu-button__icon-menu {
-  display: none;
 }
 
 .logo {
@@ -835,13 +802,59 @@ button {
   line-height: 1.5555555556;
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  z-index: 10;
+}
+
+.menu-button .icon-close {
+  display: none;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 100%;
+  height: 400px;
+  background-color: teal;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+  color: black;
+}
+.menu-container.is-hidden {
+  display: none;
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
 
 .header {
+  position: relative;
   width: 100%;
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
