--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   width: 100%;
   background-color: $primary-bg-color;
   border-bottom: 1px solid $header-border-color;
