Зафиксировал header и анимировал label модалки

--- a/css/main.css
+++ b/css/main.css
@@ -854,7 +854,9 @@ button {
 }
 
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
