--- a/css/main.css
+++ b/css/main.css
@@ -818,6 +818,11 @@ button {
   background-color: transparent;
   z-index: 10;
 }
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
 
 .menu-button .icon-close {
   display: none;
@@ -833,11 +838,11 @@ button {
 
 .menu-container {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 400px;
-  background-color: teal;
+  height: 796px;
+  background-color: rgb(237, 247, 247);
   padding: 20px;
   text-align: center;
   font-size: 20px;
