--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -7,13 +7,9 @@
 
   z-index: 10;
 
-  //   @include mq(tab) {
-  //     display: none;
-  //   }
-
-  //   @include mq(desk) {
-  //     display: none;
-  //   }
+  @include mq(tab) {
+    display: none;
+  }
 }
 
 .menu-button .icon-close {
@@ -31,13 +27,13 @@
 .menu-container {
   position: absolute;
 
-  top: 10px;
-  left: 10px;
+  top: 0;
+  left: 0;
   width: 100%;
 
-  height: 400px;
+  height: 796px;
 
-  background-color: teal;
+  background-color: rgb(237, 247, 247);
   padding: 20px;
   text-align: center;
   font-size: 20px;
