Допилил моб. меню и адаптивку для модалки. + накинул Mask.JS на input телефона в модалке

--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -85,10 +85,10 @@
 }
 
 .hero__backdrop {
-  @include mq(desk) {
-    z-index: 11;
-    position: fixed;
-    top: 0;
-    left: 0;
-  }
+  // @include mq(desk) {
+  z-index: 11;
+  position: fixed;
+  top: 0;
+  left: 0;
+  // }
 }
