--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,6 +3,7 @@ $animation-works-overlay: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1),
 $transition-duration: 250ms;
 $transition-duration-modal: 950ms;
 $transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+$transition-variable: 350ms cubic-bezier(0.4, 0, 0.2, 1);
 
 $primary-bg-color: #ffffff;
 $footer-bg-color: #2f303a;
