--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,9 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+body.no-scroll {
+  overflow: hidden;
+}
 
 html {
   -webkit-box-sizing: border-box;
@@ -256,142 +259,14 @@ button {
   color: #2196f3;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-}
-
-.main-nav {
-  display: none;
-}
-@media screen and (min-width: 768px) {
-  .main-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 50px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .main-nav__link {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    color: #212121;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    -webkit-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 250ms;
-            transition-duration: 250ms;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .main-nav__link:hover {
-    color: #2196f3;
-  }
-  .main-nav__link:focus {
-    color: #2196f3;
-  }
-  .main-nav__link--current {
-    position: relative;
-    color: #2196f3;
-  }
-  .main-nav__link--current::after {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 4px;
-    bottom: 0px;
-    border-radius: 2px;
-    background-color: #2196f3;
-    -webkit-transform: translateY(1px);
-            transform: translateY(1px);
-  }
-}
-
-.auth-nav {
-  display: none;
-}
-@media screen and (min-width: 768px) {
-  .auth-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    gap: 10px;
-  }
-}
-@media screen and (min-width: 768px) and (min-width: 1200px) {
-  .auth-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: unset;
-    -webkit-box-direction: unset;
-        -ms-flex-direction: unset;
-            flex-direction: unset;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 50px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .auth-nav__link {
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.17;
-    padding-bottom: 5px;
-    padding-top: 5px;
-  }
+  font-size: 24px;
+  line-height: 1.1666666667;
 }
 @media screen and (min-width: 1200px) {
-  .auth-nav__link {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 10px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: #757575;
-    -webkit-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: var(--transition-duration);
-            transition-duration: var(--transition-duration);
-    -webkit-transition-timing-function: var(--transition-timing-function);
-            transition-timing-function: var(--transition-timing-function);
+  .logo {
+    font-size: 26px;
+    line-height: 1.1923076923;
   }
-  .auth-nav__link:hover {
-    color: #2196f3;
-  }
-  .auth-nav__link:focus {
-    color: #2196f3;
-  }
-}
-.auth-nav__link .auth-nav__icon-envelope,
-.auth-nav__link .auth-nav__icon-smartphone {
-  fill: currentColor;
 }
 
 .address {
@@ -554,8 +429,8 @@ button {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -570,6 +445,12 @@ button {
           transition-duration: 950ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .form {
@@ -808,110 +689,336 @@ button {
   transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  z-index: 10;
-}
-@media screen and (min-width: 768px) {
-  .menu-button {
-    display: none;
-  }
-}
-
-.menu-button .icon-close {
-  display: none;
-}
-
-.menu-button.is-open .icon-close {
-  display: block;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
-.menu-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 796px;
-  background-color: rgb(237, 247, 247);
-  padding: 20px;
-  text-align: center;
-  font-size: 20px;
-  color: black;
-}
-.menu-container.is-hidden {
-  display: none;
-}
-
-.menu-button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-
 .header {
   position: fixed;
   top: 0;
   left: 0;
+  padding: 10px 0;
   width: 100%;
+  z-index: 10;
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
 }
-
-@media screen and (min-width: 768px) {
-  .header__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+.header__logo--accent {
+  color: #000000;
+}
+@media (min-width: 768px) {
+  .header {
+    padding: 21px 0;
   }
 }
-@media screen and (min-width: 1200px) {
-  .header__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+@media (min-width: 1200px) {
+  .header {
+    padding: 24px 0;
   }
 }
-
-.header-nav {
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media (max-width: 767px) {
+  .header-nav {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+}
+.header-nav .main-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-column-gap: 50px;
+     -moz-column-gap: 50px;
+          column-gap: 50px;
+  margin: 0 0 0 88px;
+}
+@media (min-width: 1200px) {
+  .header-nav .main-nav {
+    margin: 0 0 0 93px;
+  }
+}
+@media (max-width: 767px) {
+  .header-nav .main-nav {
+    display: none;
+  }
+}
+.header-nav .main-nav .main-nav__link {
+  display: block;
+  color: #212121;
+  font-weight: 500;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-nav .main-nav .main-nav__link:hover, .header-nav .main-nav .main-nav__link:focus {
+  color: #2196f3;
+}
+.header-nav .main-nav .main-nav__link--current {
+  position: relative;
+  color: #2196f3;
+}
+.header-nav .main-nav .main-nav__link--current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -36px;
+  width: 100%;
+  height: 4px;
+  background-color: #2196f3;
+  border-radius: 2px;
+}
+@media (min-width: 1200px) {
+  .header-nav .main-nav .main-nav__link--current::after {
+    bottom: -33px;
+  }
 }
 
-.header__logo {
-  margin-right: 88px;
-  padding-top: 24px;
-  padding-bottom: 25px;
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0;
+  background-color: transparent;
 }
-.header__logo--accent {
-  color: #000000;
+.menu-button__icon {
+  -webkit-transition: fill 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-button__icon:hover, .menu-button__icon:focus {
+  fill: #2196f3;
+}
+@media (min-width: 768px) {
+  .menu-button__icon {
+    display: none;
+  }
+}
+
+.mobile-nav {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 48px 40px;
+  background-color: #ffffff;
+  -webkit-transform: translateY(-200%);
+          transform: translateY(-200%);
+  -webkit-transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (min-width: 768px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+.mobile-nav.is-open {
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+}
+.mobile-nav__close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+}
+.mobile-nav__icon {
+  -webkit-transition: fill 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-nav__icon:hover, .mobile-nav__icon:focus {
+  fill: #2196f3;
+}
+
+.mobile-menu__item {
+  margin: 0 0 32px 0;
+}
+.mobile-menu__item:last-child {
+  margin-bottom: 0;
+}
+.mobile-menu__link {
+  display: block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: #212121;
+  -webkit-transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu__link--active {
+  color: #2196f3;
+}
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: #2196f3;
+}
+
+.mobile-contacts__item {
+  margin: 0 0 32px 0;
+}
+.mobile-contacts__item:last-child {
+  margin-bottom: 0;
+}
+.mobile-contacts__link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  font-size: 24px;
+  line-height: 1.1666666667;
+}
+.mobile-contacts__link:hover, .mobile-contacts__link:focus {
+  text-decoration: underline;
+}
+.mobile-contacts__item:first-child .mobile-contacts__link {
+  font-size: 27px;
+  line-height: 1.1764705882;
+  color: #2196f3;
+}
+@media (min-width: 377px) {
+  .mobile-contacts__item:first-child .mobile-contacts__link {
+    font-size: 34px;
+  }
+}
+
+.mobile-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 20px;
+  margin: 64px 0 0;
+}
+.mobile-social__item {
+  position: relative;
+}
+.mobile-social__item::after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  right: -10px;
+  height: 22px;
+  width: 1px;
+  background-color: rgba(33, 33, 33, 0.2);
+}
+.mobile-social__item:last-child::after {
+  display: none;
+}
+.mobile-social__link {
+  display: block;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  -webkit-transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-social__link:hover, .mobile-social__link:focus {
+  color: #757575;
+}
+
+.auth-nav {
+  display: none;
+}
+@media (min-width: 768px) {
+  .auth-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 10px;
+  }
+}
+@media (min-width: 1200px) {
+  .auth-nav {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-column-gap: 50px;
+       -moz-column-gap: 50px;
+            column-gap: 50px;
+  }
+}
+.auth-nav__link {
+  font-weight: 500;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  color: inherit;
+  -webkit-transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.auth-nav__link:hover, .auth-nav__link:focus {
+  color: #2196f3;
+}
+@media (min-width: 768px) {
+  .auth-nav__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media (min-width: 768px) {
+  .auth-nav__icon {
+    margin-right: 8px;
+    vertical-align: bottom;
+    fill: currentColor;
+  }
+}
+@media (min-width: 1200px) {
+  .auth-nav__icon {
+    margin-right: 10px;
+  }
 }
 
 .footer {
@@ -1135,13 +1242,11 @@ button {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .hero__backdrop {
-    z-index: 11;
-    position: fixed;
-    top: 0;
-    left: 0;
-  }
+.hero__backdrop {
+  z-index: 11;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .advantages {
