--- a/sass/components/_backdrop-vs-modal.scss
+++ b/sass/components/_backdrop-vs-modal.scss
@@ -25,8 +25,8 @@
   top: 50%;
   left: 50%;
 
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
 
   background-color: $primary-bg-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -37,4 +37,9 @@
   transition-property: transform, background-color;
   transition-duration: $transition-duration-modal;
   transition-timing-function: $transition-timing-function;
+
+  @include mq(desk) {
+    width: 528px;
+    height: 581px;
+  }
 }
