--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,6 +2,11 @@
   color: $accent-blue-color;
   font-family: $logo-font-family;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: calc(28 / 24);
+
+  @include mq(desk) {
+    font-size: 26px;
+    line-height: calc(31 / 26);
+  }
 }
