--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,38 +2,301 @@
   position: fixed;
   top: 0;
   left: 0;
-
+  padding: 10px 0;
   width: 100%;
+  z-index: 10;
   background-color: $primary-bg-color;
-  border-bottom: 1px solid $header-border-color;
-}
+  border-bottom: 1px solid #ececec;
 
-.header__container {
-  @include mq(tab) {
-    display: flex;
-    justify-content: space-between;
+  &__logo--accent {
+    color: $accent-black-color;
   }
 
-  @include mq(desk) {
+  @media (min-width: 768px) {
+    padding: 21px 0;
+  }
+
+  @media (min-width: 1200px) {
+    padding: 24px 0;
+  }
+
+  &__container {
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
   }
 }
 
 .header-nav {
-  justify-content: space-between;
   display: flex;
-  align-items: center;
+
+  @media (max-width: 767px) {
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
+  .main-nav {
+    display: flex;
+    align-items: center;
+    column-gap: 50px;
+    margin: 0 0 0 88px;
+
+    @media (min-width: 1200px) {
+      margin: 0 0 0 93px;
+    }
+
+    @media (max-width: 767px) {
+      display: none;
+    }
+
+    .main-nav__link {
+      display: block;
+      color: $title-text-color;
+      font-weight: 500;
+      line-height: 1.1;
+      letter-spacing: 0.02em;
+      transition: color $transition-variable;
+
+      &:hover,
+      &:focus {
+        color: $accent-blue-color;
+      }
+
+      &--current {
+        position: relative;
+        color: $accent-blue-color;
+
+        &::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          bottom: -36px;
+          width: 100%;
+          height: 4px;
+          background-color: $accent-blue-color;
+          border-radius: 2px;
+
+          @media (min-width: 1200px) {
+            bottom: -33px;
+          }
+        }
+      }
+    }
+  }
 }
 
-.header__logo {
-  margin-right: 88px;
-  padding-top: 24px;
-  padding-bottom: 25px;
+.menu-button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 
-  &--accent {
-    color: $accent-black-color;
+  padding: 0;
+
+  background-color: transparent;
+  &__icon {
+    transition: fill $transition-variable;
+
+    &:hover,
+    &:focus {
+      fill: $accent-blue-color;
+    }
+
+    @media (min-width: 768px) {
+      display: none;
+    }
   }
+}
+
+.mobile-nav {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 48px 40px;
+  background-color: $primary-bg-color;
+  transform: translateY(-200%);
+  transition: transform $transition-variable;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+
+  &.is-open {
+    transform: translateY(0%);
+  }
+
+  &__close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    background-color: transparent;
+  }
+
+  &__icon {
+    transition: fill $transition-variable;
+
+    &:hover,
+    &:focus {
+      fill: $accent-blue-color;
+    }
+  }
+}
+
+.mobile-menu {
+  &__item {
+    margin: 0 0 32px 0;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__link {
+    display: block;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: calc(47 / 40);
+    letter-spacing: 0.02em;
+    color: $title-text-color;
+    transition: color $transition-variable;
+
+    &--active {
+      color: $accent-blue-color;
+    }
+
+    &:hover,
+    &:focus {
+      color: $accent-blue-color;
+    }
+  }
+}
+
+.mobile-contacts {
+  &__item {
+    margin: 0 0 32px 0;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__link {
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    font-size: 24px;
+    line-height: calc(28 / 24);
+
+    &:hover,
+    &:focus {
+      text-decoration: underline;
+    }
+
+    .mobile-contacts__item:first-child & {
+      font-size: 27px;
+      line-height: calc(40 / 34);
+      color: $accent-blue-color;
+
+      @media (min-width: 377px) {
+        font-size: 34px;
+      }
+    }
+  }
+}
+
+.mobile-social {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 64px 0 0;
+
+  &__item {
+    position: relative;
+
+    &::after {
+      content: " ";
+      position: absolute;
+      top: 0;
+      right: -10px;
+      height: 22px;
+      width: 1px;
+      background-color: rgba(33, 33, 33, 0.2);
+    }
+
+    &:last-child::after {
+      display: none;
+    }
+  }
+
+  &__link {
+    display: block;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: calc(22 / 18);
+    letter-spacing: 0.02em;
+    color: $accent-blue-color;
+    transition: color $transition-variable;
+
+    &:hover,
+    &:focus {
+      color: $primary-text-color;
+    }
+  }
+}
+
+.auth-nav {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  @media (min-width: 1200px) {
+    flex-direction: row;
+    align-items: center;
+    column-gap: 50px;
+  }
+
+  &__link {
+    font-weight: 500;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    color: inherit;
+    transition: color $transition-variable;
+
+    &:hover,
+    &:focus {
+      color: $accent-blue-color;
+    }
+
+    @media (min-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  &__icon {
+    @media (min-width: 768px) {
+      margin-right: 8px;
+      vertical-align: bottom;
+      fill: currentColor;
+    }
+
+    @media (min-width: 1200px) {
+      margin-right: 10px;
+    }
+  }
+  // &__item {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  // }
 }
